<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioGroup
            android:id="@+id/rgRanking1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/rbMostOrdered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/most_ordered"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbMostRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/most_rated"
                android:textSize="12sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgRanking2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/rbByWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/by_week"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbByMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_month"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tlRanking"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:paddingTop="1dp"
        android:weightSum="11" >

        <TableRow
            android:id="@+id/trRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#929292"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:weightSum="10" >

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/rank"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFood"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:background="#FFFFFF"
                android:gravity="left|center" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="      "
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#929292" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageButton
            android:id="@+id/mbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/food"
            android:onClick="goFood"
            android:src="@drawable/menu_grey" />

        <ImageButton
            android:id="@+id/mbRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/recommendation"
            android:onClick="goRecommend"
            android:src="@drawable/recommend_grey" />

        <ImageButton
            android:id="@+id/mbRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/ranking"
            android:src="@drawable/ranking" />

        <ImageButton
            android:id="@+id/mbFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/favourites"
            android:onClick="goFavourites"
            android:src="@drawable/favourites_grey" />

        <ImageButton
            android:id="@+id/mbAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/account"
            android:onClick="goAccount"
            android:src="@drawable/account_grey" />
    </LinearLayout>

</LinearLayout>