<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Favourites"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#929292" >
    </View>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#929292" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageButton
            android:id="@+id/mbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/food"
            android:onClick="goFood"
            android:src="@drawable/menu_grey" />

        <ImageButton
            android:id="@+id/mbRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/recommendation"
            android:onClick="goRecommend"
            android:src="@drawable/recommend_grey" />

        <ImageButton
            android:id="@+id/mbRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/ranking"
            android:onClick="goRanking"
            android:src="@drawable/ranking_grey" />

        <ImageButton
            android:id="@+id/mbFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/favourites"
            android:src="@drawable/favourites" />

        <ImageButton
            android:id="@+id/mbAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/account"
            android:onClick="goAccount"
            android:src="@drawable/account_grey" />
    </LinearLayout>

</LinearLayout>