<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageButton
            android:id="@+id/mbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/food"
            android:onClick="goFood"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

        <ImageButton
            android:id="@+id/mbRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/recommendation"
            android:onClick="goRecommend"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

        <ImageButton
            android:id="@+id/mbRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ranking"
            android:onClick="goRanking"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

        <ImageButton
            android:id="@+id/mbFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/favourites"
            android:onClick="goFavourites"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

        <ImageButton
            android:id="@+id/mbUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/user"
            android:onClick="goUser"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />
    </LinearLayout>

</LinearLayout>