<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="5" >

        <Button
            android:id="@+id/dummy1"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.81"
            android:onClick="goRank"
            android:text="food1" />

         <Button
             android:id="@+id/dummy2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.56"
             android:onClick="goRank"
             android:text="food2" />

          <Button
              android:id="@+id/dummy3"
              android:layout_width="334dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.49"
              android:onClick="goRank"
              android:text="food3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageButton
            android:id="@+id/mbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/food"
            android:onClick="goFood"
            android:src="@drawable/menu_grey" />

        <ImageButton
            android:id="@+id/mbRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/recommendation"
            android:src="@drawable/recommend" />

        <ImageButton
            android:id="@+id/mbRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/ranking"
            android:onClick="goRanking"
            android:src="@drawable/ranking_grey" />

        <ImageButton
            android:id="@+id/mbFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/favourites"
            android:onClick="goFavourites"
            android:src="@drawable/favourites_grey" />

        <ImageButton
            android:id="@+id/mbAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/account"
            android:onClick="goAccount"
            android:src="@drawable/account_grey" />
    </LinearLayout>

</LinearLayout>