<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="New Promotion"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00" >

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hot_dog" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fish_fillet" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/jumbo_egg_poster" />
        </LinearLayout>
    </HorizontalScrollView><View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#929292" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageButton
            android:id="@+id/mbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/food"
            android:onClick="goFood"
            android:src="@drawable/menu_grey" />

        <ImageButton
            android:id="@+id/mbRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/recommendation"
            android:onClick="goRecommend"
            android:src="@drawable/recommend_grey" />

        <ImageButton
            android:id="@+id/mbRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/ranking"
            android:onClick="goRanking"
            android:src="@drawable/ranking_grey" />

        <ImageButton
            android:id="@+id/mbFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/favourites"
            android:onClick="goFavourites"
            android:src="@drawable/favourites_grey" />

        <ImageButton
            android:id="@+id/mbAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/account"
            android:onClick="goAccount"
            android:src="@drawable/account_grey" />
    </LinearLayout>

</LinearLayout>